Anagram App/force-app/main/default/objects/Anagram__c/Anagram__c.object-meta.xml
<CustomObject>
    <description>An object that holds data about an anagram word puzzle.</description>
    <label>Anagram</label>
    <nameField>
        <label>Anagram Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Anagrams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>