Anagram App/force-app/main/default/objects/Anagram__c/fields/Hide_Solution__c.field-meta.xml
<CustomField>
    <fullName>Hide_Solution__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Hide Solution</label>
    <type>Checkbox</type>
</CustomField>