Anagram App/force-app/main/default/objects/Anagram__c/fields/Puzzle__c.field-meta.xml
<CustomField>
    <fullName>Puzzle__c</fullName>
    <label>Puzzle</label>
    <length>50</length>
    <type>Text</type>
</CustomField>