Anagram App/force-app/main/default/objects/Anagram__c/fields/Solution__c.field-meta.xml
<CustomField>
    <fullName>Solution__c</fullName>
    <description>The solved anagram</description>
    <label>Solution</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>