Anagram App/force-app/main/default/objects/Anagram__c/validationRules/Limit_Entry_Characters.validationRule-meta.xml
<ValidationRule>
    <fullName>Limit_Entry_Characters</fullName>
    <active>true</active>
    <description>Please only enter letters and spaces</description>
    <errorConditionFormula>NOT(REGEX(Solution__c, &apos;^[a-zA-Z ]*$&apos;))</errorConditionFormula>
    <errorDisplayField>Solution__c</errorDisplayField>
    <errorMessage>Please only enter letters and spaces</errorMessage>
</ValidationRule>